# tchoupi

./: .dir-locals.el  .gitignore  .travis.yml  Makefile  README.md  Vagrantfile  tchoupi.sh  travis.sh
ansible/: dev_hosts  tchoupi_dev.yml
ansible/playbooks/base/: base.yml
ansible/playbooks/vim/: vim.yml
src/chicken/: Makefile  run-tests.scm
src/chicken/src/: tchoupi.scm  version.scm
src/chicken/test/: test_api_version.scm
src/clojure/: README.md  project.clj
src/commonlisp/: Dockerfile  Makefile  README.md  qlfile  tchoupi-test.asd  tchoupi.asd  tchoupi.lisp  tchoupi.sh
src/commonlisp/ci/: init.lisp  tchoupi-ci.lisp  tchoupi-ci.sh
src/commonlisp/nginx/: nginx.conf
src/commonlisp/roswell/: app.lisp  tchoupi.ros
src/commonlisp/src/: app.lisp  package.lisp  tchoupi.lisp
src/commonlisp/supervisord/: supervisord.conf  supervisord.conf~
src/commonlisp/t/: http.lisp  package.lisp  web-test.lisp
src/commonlisp/test/: coverage.lisp  http.lisp  package.lisp  runtests.lisp  web-test.lisp
src/erlang/: .gitignore  Dockerfile  Makefile  README.md  erl_crash.dump  rebar.config  relx.config  tchoupi.erl
src/go/: Dockerfile  Makefile  README.md  glide.yaml  tchoupi.go  tchoupi.sh
src/go/api/v1/: misc.go  (+1 more)
src/haskell/: Makefile  README.md  tchoupi.cabal
src/ocaml/: .merlin  README.md  _oasis  _tags  deps.sh  opam  setup.data  setup.ml  tchoupi.ocp  tchoupi.sh
src/python/: Dockerfile  Makefile  README.md  requirements-dev.txt  requirements-test.txt  requirements.txt  runserver.py  setup.py  tchoupi.sh  tox.ini  wsgi.py
src/racket/: Makefile  README.md  info.rkt
src/ruby/: Gemfile  Guardfile  README.md  Rakefile  config.ru
src/rust/: Cargo.toml  Makefile  README.md
src/rust/src/: lib.rs  main.rs
src/rust/src/tchoupi/: mod.rs  routes.rs  version_handler.rs
src/rust/tests/: lib.rs  main.rs
(+78 files in other folders)
