[package]
name = "tchoupi"
version = "0.1.0"
readme = "README.md"
documentation = "http://github.com/nlamirault/tchoupi"
repository = "https://github.com/nlamirault/tchoupi"
authors = ["Nicolas Lamirault <nicolas.lamirault@gmail.com>"]

[dependencies]
iron="0.3.0"
router = "0.1.1"
rustc-serialize = "0.3.16"
